[package]
name = "sosistab2"
version = "0.3.4"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "Geph Project <contact@geph.io"]
edition = "2021"
description="An obfuscated datagram transport for horrible networks"
license="MPL-2.0"
repository="https://github.com/geph-official/sosistab2"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

smol= "1.3.0"
socket2 = "0.3.19"
x25519-dalek={ version = "1.1.1", features = ["serde"] }
serde={ version = "1.0.148", features = ["derive", "rc"] }
# bytes={ version = "1.0.0", features = ["serde"] }
blake3= "0.3.8"
rand= "0.7.3"
event-listener= "2.5.3"
futures-util = "0.3.25"
parking_lot= "0.11.2"
# governor= "0.3.1"
async-dup= "1.2.2"
once_cell = "1.16.0"
arc-swap= "1.5.1"
num_cpus= "1.14.0"

anyhow= "1.0.66"
scopeguard= "1.1.0"
reed-solomon-erasure= "6.0.0"
indexmap= "1.9.2"

concurrent-queue= "1.2.4"
rand_chacha= "0.2.2"
smolscale= "0.3.49"

async-trait= "0.1.59"
dashmap= "5.4.0"
smol-timeout = "0.6.0"

tracing={ version = "0.1.37", features = ["log"] }
rustc-hash= "1.1.0"
cached= "0.26.2"


smallvec= "1.10.0"
thiserror = "1.0.37"

hex= "0.4.3"
fastrand= "1.8.0"
# sluice="0.5"
bipe= "0.2.2"

probability = "0.17.0"

priority-queue = "1.3.0"
slab = "0.4.7"

bytes={ version = "1.3.0", features = ["serde"] }
pin-project= "1.0.12"

moka = "0.9.6"
log = "0.4.17"
lru = "0.8.1"

arrayref = "0.3.6"


stdcode = "0.1.13"
microsleep = { version = "0.1.14", optional = true }


async-native-tls = { version = "0.4.0", features = ["vendored"] }
native-tls = "0.2.11"
subtle = "2.4.1"

derivative = "2.2.0"

ring = "0.16.20"
smol_str = "0.1.23"


[profile.dev]
panic="abort"

[profile.release-dbg]
inherits="release"
panic = "abort"
debug=2


[profile.release]
panic = "abort"



[dev-dependencies]
argh= "0.1.9"
env_logger= "0.9.3"
socksv5= "0.3.0"
criterion = "0.3.6"
rcgen = "0.10.0"
dirs= "4.0.0"
itertools = "0.10.5"
smol_str = "0.1.23"


[[bench]]
name = "my_benchmark"
harness = false
