[package]
name = "sosistab2"
version = "0.10.20"
authors = [
  "nullchinchilla <nullchinchilla@pm.me>",
  "Geph Project <contact@geph.io",
]
edition = "2021"
description = "An obfuscated datagram transport for horrible networks"
license = "MPL-2.0"
repository = "https://github.com/geph-official/sosistab2"

[dependencies]
smol = "2.0.0"
x25519-dalek = { version = "2.0.1", features = [
  "serde",
  "static_secrets",
  "getrandom",
] }
serde = { version = "1.0.202", features = ["derive", "rc"] }
blake3 = "1"
event-listener = "5.3.0"
futures-util = "0.3.30"
parking_lot = "0.12"
once_cell = "1.19.0"
anyhow = "1.0.83"
concurrent-queue = "2.5.0"
smolscale = "0.4"
async-trait = "0.1.80"
smol-timeout = "0.6.0"
thiserror = "1.0.60"
fastrand = "2.1.0"
bytes = { version = "1.6.0", features = ["serde"] }
pin-project = "1.1.5"
log = "0.4.21"
arrayref = "0.3.7"
stdcode = "0.1.14"
replay_filter = { version = "0.1", path = "lib/replay_filter" }
ahash = { version = "0.8.11", features = ["serde"] }
async-event = "0.2.0"
recycle-box = "0.2.0"
futures-intrusive = "0.5.0"
chacha20poly1305 = "0.10.1"
clone-macro = "0.1.0"

[profile.dev]
opt-level = 1

[profile.release-dbg]
inherits = "release"
panic = "abort"
debug = 2

[profile.release]
panic = "abort"

[dev-dependencies]
env_logger = "0.11.3"
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
